Started working on user_product_view from users table. Remade edit to /id/edit. same for products.

--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -29,6 +29,11 @@ body {
 .box-item {
     min-width: 40vw;
     min-height: auto;
+    cursor: auto !important;
+}
+
+.box-name {
+    cursor: pointer;
 }
 
 .right-btn {
