--- a/app/src/styles/global.css
+++ b/app/src/styles/global.css
@@ -1,3 +1,5 @@
+/* For styling in most cases Bootstrap was used. For specific edge-cases, however, styles are taken from here */
+
 html {
     min-height: 100%;
 }
